--- a/features/news/presentation/src/main/res/values/strings.xml
+++ b/features/news/presentation/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="stub_headline_date">Today</string>
     <string name="error_message_device_connection">Please check network connection</string>
     <string name="error_message_remote_server">Remote server error,please try again later</string>
-    <string name="mime_type_text">text</string>
+    <string name="mime_type_text">text/plain</string>
     <string name="title_share_headline_chooser">Share headline</string>
+    <string name="message_article_unavailable">Device has no browser,article unavailable!</string>
 </resources>
